# cyxtrade

./: # CyxTrade.md  CLAUDE.md  README.md  market.md  pricing-v1.md
admin/: index.html  package-lock.json  package.json
admin/src/: index.css  router.tsx
admin/src/components/: BulkActionBar.tsx  Layout.tsx
admin/src/pages/: AuditLogPage.tsx  DashboardPage.tsx  DisputeDetailPage.tsx  DisputeListPage.tsx  LoginPage.tsx  TraderDetailPage.tsx  TraderListPage.tsx
admin/src/services/: api.ts
admin/src/store/: auth.ts
admin/src/types/: index.ts
backend/: .env.example  package-lock.json  package.json
backend/migrations/: 001_add_contract_fields.sql  001_unified_schema.sql  003_dispute_claim_types.sql  004_admin_rbac_audit.sql  005_username_totp.sql
backend/scripts/: create-admin.ts  fix-schema.ts  migrate.ts  run-migration.js  test-e2e-trade.ts  test-realtime-dual.js  test-realtime.js  verify-migration.ts
backend/src/: index.ts
backend/src/config/: database.ts  redis.ts  schema.sql
backend/src/middleware/: auth.ts  errorHandler.ts  totpMiddleware.ts  upload.ts
backend/src/migrations/: 001_keypair_auth_verification.sql  002_cyxtrade_pro.sql
backend/src/routes/: admin.ts  auth.ts  bootstrap.ts  chat.ts  keys.ts  market.ts  relay.ts  risk.ts  totp.ts  traders.ts  trades.ts  uploads.ts  users.ts
backend/src/routes/pro/: ads.ts  index.ts  orders.ts  social.ts  wallet.ts
backend/src/scripts/: seed.ts
backend/src/services/: adService.ts  auditService.ts  blockchainService.ts  crypto.ts  db.ts  disputeService.ts  encryptionService.ts  ipfsService.ts  orderService.ts  p2pChatService.ts  p2pOrderService.ts  p2pSocialService.ts  paymentMethodService.ts  paymentVerificationService.ts  rbacService.ts  riskService.ts  socket.ts  totpService.ts  tradeService.ts  traderService.ts  uploadService.ts  userService.ts  walletService.ts
backend/src/types/: index.ts
backend/src/utils/: errors.ts  response.ts
contracts/: ArbitratorRegistry.sol  CyxTradeEscrow.sol  DisputeResolution.sol  README.md  package-lock.json  package.json  tronbox.js
contracts/contracts/: ArbitratorRegistry.sol  CyxTradeEscrow.sol  DisputeResolution.sol  MockUSDT.sol
contracts/contracts/interfaces/: ICyxTradeEscrow.sol
contracts/interfaces/: ICyxTradeEscrow.sol
contracts/migrations/: 1_deploy_contracts.js  2_deploy_contracts.js  3_deploy_mock_usdt.js
contracts/scripts/: deploy-mock-usdt.js  test-complete-flow.js  test-escrow.js  test-full-flow.js
contracts/test/: CyxTradeEscrow.test.js
docs/: ARBITRATOR_SYSTEM.md  ARCHITECTURE.md  AUTHENTICATION.md  BOND_ESCROW.md  COMPETITIVE_RESEARCH_2026.md  COMPLIANCE_PRINCIPLES.md  CYXTRADE_AMENDMENT_ROADMAP.md  CYXTRADE_PRO_DESIGN.md  DATABASE.md  DISPUTE_RESOLUTION.md  ECOSYSTEM_EXPANSION.md  EXPANSION_ROADMAP.md  IMPLEMENTATION.md  MAINNET_DEPLOYMENT.md  MVP_SECURITY.md  MVP_USER_STORIES.md  P2P_NETWORK.md  PLATFORM_MODEL.md  RESEARCH.md  RUN_FRONTEND_BACKEND.md  SECURITY_AUDIT.md  SECURITY_MODEL.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_DESIGN.md  TRADER_ONBOARDING.md  TRUST_MODEL.md  UX_DESIGN.md  VALIDATION.md
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/config/: api.dart  router.dart  theme.dart
mobile/lib/ffi/: cyxwiz_bindings.dart
mobile/lib/providers/: auth_provider.dart  p2p_provider.dart  trade_provider.dart  trader_provider.dart
mobile/lib/screens/: splash_screen.dart
mobile/lib/screens/about/: about_screen.dart
mobile/lib/screens/arbitrator/: become_arbitrator_screen.dart
mobile/lib/screens/auth/: complete_profile_screen.dart  login_screen.dart  otp_screen.dart
mobile/lib/screens/chat/: chat_screen.dart
mobile/lib/screens/history/: history_screen.dart
mobile/lib/screens/home/: home_screen.dart
mobile/lib/screens/notifications/: notifications_screen.dart
mobile/lib/screens/profile/: edit_profile_screen.dart  profile_screen.dart
mobile/lib/screens/send/: confirm_screen.dart  send_screen.dart  trader_selection_screen.dart
mobile/lib/screens/settings/: settings_screen.dart
mobile/lib/screens/trade/: dispute_screen.dart  payment_instructions_screen.dart  rate_trade_screen.dart  receipt_screen.dart  trade_detail_screen.dart  trade_success_screen.dart
mobile/lib/screens/trader/: become_trader_screen.dart  payment_method_form_screen.dart  payment_methods_screen.dart  trader_dashboard_screen.dart  (+1 more)
mobile/lib/services/: api_error.dart  api_service.dart  connectivity_service.dart  crypto_service.dart  identity_service.dart  p2p_isolate.dart  p2p_service.dart  secure_chat_service.dart  socket_service.dart  storage_service.dart
mobile/lib/utils/: error_utils.dart
mobile/lib/widgets/: error_display.dart  offline_banner.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/native/: CMakeLists.txt  build_android.sh  build_ios.sh  build_windows.bat
mobile/native/src/: cyxwiz_ffi.c
mobile/test/: p2p_onion_test.dart  p2p_service_test.dart  p2p_test.dart  widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
shared/: config.json
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx  router.tsx
web/src/components/: CountdownTimer.tsx  DisputeForm.tsx  FeeBreakdown.tsx  ScamWarningModal.tsx  TOTPSetupWizard.tsx  TOTPVerificationModal.tsx  TraderScorecard.tsx
web/src/hooks/: useRiskAssessment.ts
web/src/pages/: About.tsx  AppHome.tsx  BecomeTrader.tsx  Chat.tsx  CompleteProfile.tsx  Download.tsx  History.tsx  Login.tsx  MyAds.tsx  OtpVerify.tsx  PaymentMethods.tsx  PostAd.tsx  PostTraderAd.tsx  ProChat.tsx  ProMarketplace.tsx  ProOrderDetails.tsx  ProOrders.tsx  ProTrade.tsx  ProUserCenter.tsx  ProWallet.tsx  SendMoney.tsx  Settings.tsx  TradeDetails.tsx  TraderDashboard.tsx
web/src/services/: crypto.ts
web/src/store/: auth.ts  pro.ts  trade.ts  trader.ts
(+4 files in other folders)
